# Autonomous_Robot

./: .gitignore  PARAMETER_MISMATCHES.md  PARAMETER_UPDATES_APPLIED.md  QUICK_START_EXPERIMENTS.md  README_EXPERIMENTS.md  frames_2026-02-14_22.24.57.gv  frames_2026-02-17_22.13.34.gv  frames_2026-02-17_22.17.58.gv  frames_2026-02-17_22.49.50.gv  frames_2026-02-18_08.25.34.gv  frames_2026-02-18_10.56.46.gv  frames_2026-02-19_11.11.53.gv  full_graph.txt  lucidchartgraphgenerator.py  ros2_architecture_nodes_only.drawio  ros2_lucidchart_architecture.drawio  ros2nodegraphforlucid.csv  ros2nodegraphforlucid.csv.xlsx  ros2nodegraphforlucid.xlsx  ros_package_sniffer.py  ros_package_structure_summary.txt  rosgraph.dot  run_experiment.sh  summary.txt  supervisor_scenarios.md  visualize_experiment.py
install/: local_setup.sh  (+4 more)
install/mobile_robot/share/mobile_robot/: package.dsv  package.sh  package.xml
install/mobile_robot/share/mobile_robot/launch/: Gazebolaunchbashscript.yaml  execute.launch.py  gazebo_model.launch.py  gazebo_model2.launch.py  gazebo_model_with_cylinders.launch.py  simple_guest_find_approach.launch.py
install/mobile_robot/share/mobile_robot/model/: charging_stations.sdf  robot.gazebo  robot.xacro
install/mobile_robot/share/mobile_robot/parameters/: avoidance_parameters.yaml  battery_tunable_parameters.yaml  bridge_parameters.yaml
install/mobile_robot/share/mobile_robot/world/: arena2.py
install/mobile_robot/share/mobile_robot/worlds/: arena2.py  arena_2moving_cylinders.sdf  arena_moving_cylinder.py  arena_moving_cylinder.sdf  bounce_cylinder.py
(+236 files in other folders)
